# MF2063-ESS-NW-CAR

./: .gitignore  Doxyfile  README.md  deploy_code.sh  export_bbb.sh  index.html
Power Schematics/boost step up converter/: MIC2253_test.sxsch
Project_Management/: .gitignore
Project_Management/Final_Report_Embedded/: Final_Report_Embedded.tex  Final_Report_Embedded.tex.orig  reference.bib
Project_Management/Final_Report_Management/: Final_Report_Management.tex
Project_Management/Project_Plan/: .gitignore  ESS-CARNW_2018_projectplan_1.tex
Project_Management/Status_Report_1/: ESS-CARNW_2018_statusreport1_1.blg
Project_Management/Status_Report_2/: ESS-CARNW_2018_statusreport2_1.tex
Project_Management/Status_Report_4/: ESS-CARNW_2018_statusreport4_1.tex
Project_Plan/: ESS-CARNW_2018_projectplan_1.bib  ESS-CARNW_2018_projectplan_1.tex
Status_Report_1/: ESS-CARNW_2018_statusreport1_1.aux  ESS-CARNW_2018_statusreport1_1.tex
ard-distance/: README.md  ard-distance.ino  ultrasonic-BBB.py
ard-distance/ard-distance-spi/: ard-distance-spi.ino
ard-distance/ultrasonic-arduino/: ultrasonic-arduino.ino
ard-motor/: README.md  motor_control.ino
ard-motor/esc_programmer/: esc_programmer.ino
ard-motor/motor_control/: motor_control.ino
ard-speed/: Makefile  README.md  ard-speed.ino  ultrasonic-arduino.py
ard-speed/ultrasonic-arduino/: ultrasonic-arduino.ino
ard-steering/: README.md  ard-steering.ino  servo_control.ino
ard-steering/servo_control/: servo_control.ino
bbb-car-contoller/: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  car_controller_statemachine.c  car_controller_statemachine.h  test_sm.c  vsomeip.json
bbb-car-contoller/include/: ess_prototype.hpp
bbb-car-contoller/linux_configurations/: README.md  hostname  interfaces
bbb-car-contoller/model/: car_controller-state_machine.smv
bbb-car-contoller/shared/: CyclicBuffer.hpp
bbb-car-contoller/src/: CMakeLists.txt  car_controller_statemachine.c  car_controller_statemachine.cpp  car_controller_statemachine.h  car_controller_statemachine.hpp  car_ctrl_client.cpp  car_ctrl_client.hpp  ess_prototype.cpp  ess_prototype.hpp  main.cpp
bbb-car-controller/: CMakeLists.txt  README.md  autostart.sh  vsomeip.json
bbb-car-controller/lib/controller-statemachine/: controller_statemachine.cpp  controller_statemachine.hpp
bbb-car-controller/lib/controller_statemachine/: controller_statemachine.cpp  controller_statemachine.hpp
bbb-car-controller/lib/ess_prototype/: ess_prototype.cpp  ess_prototype.hpp
bbb-car-controller/lib/shared_memory/: SharedMemory.cpp
bbb-car-controller/linux_configurations/: README.md  hosts  install_vsomeip.sh  interfaces
bbb-car-controller/model/: README.md  car_controller-state_machine_model.smv
bbb-car-controller/src/: car_controller_statemachine.cpp  car_controller_statemachine.hpp  car_ctrl_client.cpp  car_ctrl_client.hpp  ess_prototype.cpp  ess_prototype.hpp  ess_shell.cpp  main.cpp  prototype_test.cpp
bbb-distance-steering/: CMakeLists.txt  Doxyfile.in  README.md  autostart.sh  distance.cpp  vsomeip.json
bbb-distance-steering/lib/shared_memory/: CyclicBuffer.cpp
bbb-distance-steering/linux_configurations/: README.md  cfg_bbb.sh  hostname  hosts  interfaces
bbb-distance-steering/src/: dist_steer.cpp  dist_steer_service.cpp  dist_steer_service.hpp  distance.cpp  main.cpp
bbb-motor-speed/: CMakeLists.txt  Makefile  README.md  SimpleGPIO.cpp  SimpleGPIO.hpp  autostart.sh  motor_speed_spi.cpp  spi_setup.sh  vsomeip.json
bbb-motor-speed/lib/shared_memory/: CyclicBuffer.cpp
bbb-motor-speed/linux_configurations/: README.md  cfg_bbb.sh  hostname  hosts  interfaces  spi_setup.sh  sudoers
bbb-motor-speed/shared/: CyclicBuffer.hpp  SharedMemory.hpp
bbb-motor-speed/src/: CyclicBuffer.hpp  main.cpp  motor_speed_service.cpp  motor_speed_service.hpp  speed.cpp  vsomeip_ids.hpp
cfg_bbb/: README.md  cfg_bbb.sh  debian  install_vsomeip.sh  spi_setup.sh
doc/html/: CyclicBuffer_8hpp_source.html  SharedMemory_8hpp_source.html  SimpleGPIO_8h_source.html  annotated.html  ard-distance-spi_8ino.html  ard-distance-spi_8ino__incl.map  ard-distance-spi_8ino__incl.md5  ard-distance_8ino.html  ard-distance_8ino__incl.map  ard-distance_8ino__incl.md5  ard-speed_8ino.html  ard-speed_8ino__incl.map  ard-speed_8ino__incl.md5  ard-steering_8ino.html  ard-steering_8ino__incl.map  ard-steering_8ino__incl.md5  bbb-car-controller_2src_2vsomeip__ids_8hpp_source.html  bbb-distance-steering_2src_2vsomeip__ids_8hpp_source.html  bbb-motor-speed_2src_2vsomeip__ids_8hpp_source.html  camera__service_8hpp_source.html  car__ctrl__client_8hpp_source.html  classBuffer-members.html  classBuffer.html  classCSharedMemory-members.html  classCSharedMemory.html  classCSharedMemoryException-members.html  classCSharedMemoryException.html  classCSharedMemoryException__coll__graph.map  classCSharedMemoryException__coll__graph.md5  classCSharedMemoryException__inherit__graph.md5  classCameraService-members.html  classCameraService.html  classCameraService__coll__graph.map  classCameraService__coll__graph.md5  classCarCTRLClient-members.html  classCarCTRLClient.html  classCarCTRLClient__coll__graph.map  classCarCTRLClient__coll__graph.md5  classDistSteerService-members.html  (+96 more)
ess-nw-assignments/: .gitignore
flag-things/: colorChangingPage.html
pcb/: README.md
platform/: README.md
rpi-sdn-controller/: README.md
rpi-vision/: CMakeLists.txt  README.md  install_vsomeip.sh  vsomeip.json
rpi-vision/camera_service/: CMakeLists.txt  install_vsomeip.sh
rpi-vision/camera_service/src/: camera_service.cpp  color_detection_cpp.py
rpi-vision/camera_service3/src/: camera_service.cpp
rpi-vision/color_detection/: color_detection_cpp_t.py  color_detection_function.py  color_detection_old.py  vsomeip.json
rpi-vision/object_detection/: real_time_object_detection.py
rpi-vision/src/: camera_service.cpp  camera_service.hpp  color_detection_cpp.py  py_detector.cpp  py_detector.hpp  vsomeip_ids.hpp
rpi-vision/src/python/: CMakeLists.txt  color_detection_cpp.py  py_detector.cpp  py_detector.hpp
(+161 files in other folders)
